--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.opencsv:opencsv:5.5'
+	implementation 'org.apache.poi:poi:4.1.2'
+	implementation 'org.apache.poi:poi-ooxml:4.1.2'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
